tests/miniJava/neg/003814_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( public ) { } else { } } }
